--- a/UI/intel.html
+++ b/UI/intel.html
@@ -21,7 +21,7 @@
             width: 300px;
             height: 150px;
             padding: 5px;
-         }
+        }
         div { height:  2000px; }
     </style>
     <style>
@@ -66,7 +66,7 @@
 
 
 <h2 class="UserDecriprtionClass" align="center">Varya</h2>
-<h2> 18y.o., Minsk, BSU, FAMCS</h2>
+<h2> 19y.o., Minsk, BSU, FAMCS</h2>
 <form action="" method="post" class="search">
     <input type="search" name="" placeholder="Search..." class="input" />
     <input type="submit" name="" value="" class="submit" />
@@ -76,24 +76,43 @@
     <a class="Information" href="#">About</a>
 </div>
 <div class="thumb">
-    <a href="FirstPicture.html"><img src="r3xsQCnfCsw.jpg"width="540" height="520">
-    </a>
-        <img src="AEB2sCWYZ0w.jpg"width="540" height="520">
-        <img src="bjuagw3klA0.jpg"width="540" height="520">
-        <img src="wQB-mrma10k.jpg"width="540" height="520">
-        <img src="dCndhz-Z3Kc.jpg"width="540" height="520">
-        <img src="44_a1nojpWM.jpg"width="540" height="520">
-        <img src="Ywpky192Hmk.jpg"width="540" height="520">
-        <img src="M5pa9KK5VOo.jpg"width="540" height="520">
-        <img src="0q-hvjqVAls.jpg"width="540" height="520">
-        <img src="R-AJ1QlSSSU.jpg"width="540" height="520">
-
+    <div class ="post"><img src="r3xsQCnfCsw.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class = "textComment">121 Искусство</pre></div>
+    <div class ="post"><img src="AEB2sCWYZ0w.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">65 Town</pre></div>
+    <div class ="post"><img src="bjuagw3klA0.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">89 Sea</pre></div>
+    <div class ="post"><img src="wQB-mrma10k.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">67 Mood</pre></div>
+    <div class ="post"><img src="dCndhz-Z3Kc.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">140 Trains</pre></div>
+    <div class ="post"><img src="44_a1nojpWM.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">77 Big city</pre></div>
+    <div class ="post"><img src="Ywpky192Hmk.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">54 Evening</pre></div>
+    <div class ="post"> <img src="M5pa9KK5VOo.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">99 Beauty</pre></div>
+    <div class ="post"><img src="0q-hvjqVAls.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">84 Пальмы</pre></div>
+    <div class ="post"><img src="R-AJ1QlSSSU.jpg"width="500" height="480">
+        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+        <pre class="textComment">68 Дом</pre></div>
 </div>
-    <img src="pyfxjr.PNG"class="logo" align="left">
-<p1> <img src="ч2.PNG" align="left"width="353" height="112">    
+<img src="pyfxjr.PNG"class="logo" align="left">
+<p1> <img src="ч2.PNG" align="left"width="353" height="112">
 </p1>
 <div>
     <img src="sVBKiAQd5nE.jpg "class="userPhoto"width="140" height="140">
 </div>
+<script src="scrypt.js"></script>
 </body>
 </html>
