--- a/UI/intel.html
+++ b/UI/intel.html
@@ -21,7 +21,7 @@
             width: 300px;
             height: 150px;
             padding: 5px;
-         }
+        }
         div { height:  2000px; }
     </style>
     <style>
@@ -71,22 +71,24 @@
     <input type="search" name="" placeholder="Search..." class="input" />
     <input type="submit" name="" value="" class="submit" />
 </form>
-<a href="#" class="LoadButton">Load next</a>
+<button href="#" class="LoadButton">Load next</button>
 <div class="social">
     <a class="Information" href="#">About</a>
 </div>
 <div class="thumb">
-    <div class ="post"><img src="r3xsQCnfCsw.jpg"width="500" height="480">
+   <!-- <div class ="post"><img src="r3xsQCnfCsw.jpg"width="500" height="480">
         <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
-    <pre class = "textComment">121 Искусство</pre></div>
+        <pre class = "textComment">121 Искусство</pre></div>
     <div class ="post"><img src="AEB2sCWYZ0w.jpg"width="500" height="480">
         <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
         <pre class="textComment">65 Town</pre></div>
     <div class ="post"><img src="bjuagw3klA0.jpg"width="500" height="480">
         <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
         <pre class="textComment">89 Sea</pre></div>
-    <div class ="post"><img src="wQB-mrma10k.jpg"width="500" height="480">
-        <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
+    <div class ="post">
+        <img src="wQB-mrma10k.jpg"width="500" height="480">
+        <div class ="like">
+            <img src = "heart-2055203_960_720.png"width="30"height="30"></div>
         <pre class="textComment">67 Mood</pre></div>
     <div class ="post"><img src="dCndhz-Z3Kc.jpg"width="500" height="480">
         <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
@@ -105,13 +107,15 @@
         <pre class="textComment">84 Пальмы</pre></div>
     <div class ="post"><img src="R-AJ1QlSSSU.jpg"width="500" height="480">
         <div class ="like"><img src = "heart-2055203_960_720.png"width="30"height="30"></div>
-        <pre class="textComment">68 Дом</pre></div>
+        <pre class="textComment">68 Дом</pre></div> -->
 </div>
-    <img src="pyfxjr.PNG"class="logo" align="left">
+<img src="pyfxjr.PNG"class="logo" align="left">
 <p1> <img src="ч2.PNG" align="left"width="353" height="112">
 </p1>
 <div>
     <img src="sVBKiAQd5nE.jpg "class="userPhoto"width="140" height="140">
 </div>
+<script src="scrypt.js"></script>
+<script src="DOM.js"></script>
 </body>
 </html>
